Updating the publications from JMB

--- a/biblio.bib
+++ b/biblio.bib
@@ -1380,3 +1380,67 @@ of a web browser embedded in an Eclipse view.},
   hal_version  = {v1}
 }
 
+@inproceedings{DBLP:conf/isdevel/AslamNBB21,
+  author    = {Hamna Aslam and
+               Alexandr Naumchev and
+               Jean{-}Michel Bruel and
+               Joseph Alexander Brown},
+  editor    = {Emilio Insfr{\'{a}}n and
+               Silvia Abrah{\~{a}}o and
+               Marta Fern{\'{a}}ndez and
+               Chris Barry and
+               Michael Lang and
+               Henry Linger and
+               Christoph Schneider},
+  title     = {Examining Requirements Documentation through the Focused Conversation
+               Method},
+  booktitle = {Information Systems Development: Crossing Boundaries between Development
+               and Operations (DevOps) in Information Systems {(ISD2021} Proceedings),
+               Valencia, Spain, September 8-10, 2021},
+  publisher = {Universitat Polit{\`{e}}cnica de Val{\`{e}}ncia / Association for
+               Information Systems},
+  year      = {2021},
+  url       = {https://aisel.aisnet.org/isd2014/proceedings2021/managingdevops/5},
+  timestamp = {Fri, 13 Aug 2021 14:30:54 +0200},
+  biburl    = {https://dblp.org/rec/conf/isdevel/AslamNBB21.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/icst/NigmatullinSMEB22,
+  author    = {Ildar Nigmatullin and
+               Andrey Sadovykh and
+               Nan Messe and
+               Sophie Ebersold and
+               Jean{-}Michel Bruel},
+  title     = {{RQCODE} - Towards Object-Oriented Requirements in the Software Security
+               Domain},
+  booktitle = {15th {IEEE} International Conference on Software Testing, Verification
+               and Validation Workshops {ICST} Workshops 2022, Valencia, Spain, April
+               4-13, 2022},
+  pages     = {2--6},
+  publisher = {{IEEE}},
+  year      = {2022},
+  url       = {https://doi.org/10.1109/ICSTW55395.2022.00015},
+  doi       = {10.1109/ICSTW55395.2022.00015},
+  timestamp = {Mon, 13 Jun 2022 16:53:37 +0200},
+  biburl    = {https://dblp.org/rec/conf/icst/NigmatullinSMEB22.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/sncs/CapozuccaBMM22,
+  author    = {Alfredo Capozucca and
+               Jean{-}Michel Bruel and
+               Manuel Mazzara and
+               Bertrand Meyer},
+  title     = {Special Issue on New Paradigms of Software Production and Deployment},
+  journal   = {{SN} Comput. Sci.},
+  volume    = {3},
+  number    = {2},
+  pages     = {132},
+  year      = {2022},
+  url       = {https://doi.org/10.1007/s42979-022-01029-9},
+  doi       = {10.1007/s42979-022-01029-9},
+  timestamp = {Wed, 16 Mar 2022 22:31:59 +0100},
+  biburl    = {https://dblp.org/rec/journals/sncs/CapozuccaBMM22.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
